2007-02-13  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Version 1.0.2

2007-02-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* doc/pgpool-ja.html: Add release note.

2007-02-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* doc/pgpool-ja.html: Add Japanese release note into
	  pgpool-ja.html.

2007-02-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool.h, pool_connection_pool.c: pgpool *only* checks
	  backend connection when connection pool is reused.

2007-02-09  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* NEWS: fix indent.

2007-02-09  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* NEWS: Remove '\000'.

2007-02-08  Tatsuo Ishii  <ishii@sraoss.co.jp>

	* doc/pgpool-en.html: prepare for 1.0.2

2007-02-08  Tatsuo Ishii  <ishii@sraoss.co.jp>

	* NEWS, config.h.in, configure: Prepare for 1.0.2

2007-02-08  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* doc/pgpool-ja.html: Add new loadbalancing rule in replication
	  mode section.

2007-02-08  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_query_cache.c, configure.in, pool_system.c: Fixed configure
	  error if libpq version is 7.4.x. 7.4 does not have PQprepare().
	  So when version is 7.4, pgpool uses PREPARE statement instead of
	  PQprepare().

2007-02-08  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* configure.in: Prepare for 1.0.2

2007-02-07  Tatsuo Ishii  <ishii@sraoss.co.jp>

	* Makefile.in, aclocal.m4, configure, configure.in, pool_config.c,
	  parser/Makefile.in, pcp/Makefile.in: update configure.in to use
	  pg_config.  Patch made by Yoshiyuki Asaba.

2007-02-06  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_connection_pool.c: Add checking socket state when connection
	  pool is reused.  If socket is closed, pgpool try to create new
	  connection pool.

2007-01-30  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Disable to load balance in the following
	  cases.    - SELECT FOR UPDATE    - SELECT INTO    - /* xxx */
	  SELECT ... (This is pgpool-I spec.)
